@@ -960,26 +960,11 @@ void hideTab(GtkWidget *widget,gpointer data)
 
 void toggleReadOnly(GtkWidget *widget,gpointer data)
 {
-//	GtkTextIter startiter;
-//	GtkTextIter enditer;
-	
 	pageStruct	*page=(pageStruct*)data;
+	if(page==NULL)
+		return;
 	page->isEditable=!page->isEditable;
-//	gtk_text_buffer_get_start_iter ((GtkTextBuffer*)page->buffer,&startiter);
-//	gtk_text_buffer_get_end_iter ((GtkTextBuffer*)page->buffer,&enditer);
-//
-//gtk_text_buffer_select_range ((GtkTextBuffer*)page->buffer,
- //                                &startiter,
-//                                 &enditer);
-//gtk_text_buffer_place_cursor ((GtkTextBuffer*)page->buffer,&startiter);
-
-	//gtk_text_view_set_editable((GtkTextView*)page->view,page->isEditable);
 	gtk_widget_set_sensitive(GTK_WIDGET(page->view),page->isEditable);
-//	gtk_widget_show((GtkWidget*)page->view);
-//		styleScheme=gtk_source_style_scheme_manager_get_scheme(schemeManager,styleName);
-//gtk_source_buffer_set_style_scheme((GtkSourceBuffer*)page->buffer,styleScheme);
-//setFilePrefs(page);
-//printf("page=%p, edit=%i widg edit=%i\n",page,page->isEditable,gtk_text_view_get_editable((GtkTextView*)page->view));
 }
 
 bool tabPopUp(GtkWidget *widget,GdkEventButton *event,gpointer user_data)
