@@ -1,4 +1,6 @@
 0.4.2
+Added --session/-f option to load new session on opening a new instance, format is --session=/full/path/to/session/file.
+Locked pages are now stored/re-loaded with save/restore session.
 Fixed locking contents.
 Fixed tab size in gtk3 again!
 Added Lock/Unlock contents to tab popup.
